[gd_scene load_steps=7 format=3 uid="uid://dfe6bc7mdpexj"]

[ext_resource type="Script" path="res://main.gd" id="1_aj1i0"]
[ext_resource type="PackedScene" uid="uid://bkjtywx8bewfh" path="res://player.tscn" id="1_khclm"]
[ext_resource type="PackedScene" uid="uid://dpjckt12ipcw2" path="res://enemy.tscn" id="2_yupeh"]
[ext_resource type="Texture2D" uid="uid://dkgw6o04xoqp3" path="res://art/woodsSummer01.png" id="3_4mgtr"]
[ext_resource type="PackedScene" uid="uid://dxs5yefoboyqi" path="res://bullet.tscn" id="3_n2ks3"]
[ext_resource type="PackedScene" uid="uid://yaht8i4bkv2u" path="res://HUD.tscn" id="4_mi06j"]

[node name="Main" type="Node"]
script = ExtResource("1_aj1i0")
enemy_scene = ExtResource("2_yupeh")
bullet_scene = ExtResource("3_n2ks3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1226.0
offset_bottom = 1226.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_4mgtr")

[node name="Player" parent="." instance=ExtResource("1_khclm")]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(576, 325)

[node name="HUD" parent="." instance=ExtResource("4_mi06j")]

[connection signal="fire_bullet" from="Player" to="." method="_on_player_fire_bullet"]
[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
[connection signal="taken_damage" from="Player" to="." method="_on_player_taken_damage"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
